hard-gists/2321077/run.log
=== Docker Run Log for 2321077 ===
Started at: Mi 29. Okt 13:02:17 CET 2025

[2025-10-29 13:02:17] START: Running container for 2321077
[2025-10-29 13:02:18] SUCCESS: Container 3778cd12406d5130b9968a4cd2f8cf53f784c4f2e0bb19c21ea835f0054a853d started for 2321077
=== Container logs for 2321077 ===
  File "/snippet.py", line 55
    except ValueError, msg:
           ^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2321077 ===
[2025-10-29 13:02:20] INFO: Container 3778cd12406d5130b9968a4cd2f8cf53f784c4f2e0bb19c21ea835f0054a853d has stopped
